[package]
name = "sarah-watch"
version = "0.1.0"
authors = ["Sarah Ohlin <sarahohlin1@gmail.com>"]
edition = "2021"
license = "MIT"

[patch.crates-io]
esp-hal = { git = "https://github.com/esp-rs/esp-hal" }
esp-wifi = { git = "https://github.com/esp-rs/esp-hal" }
esp-println = { git = "https://github.com/esp-rs/esp-hal" }
esp-alloc = { git = "https://github.com/esp-rs/esp-hal" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal" }

[dependencies]
esp-backtrace = { version = "0.12.1", features = [
    "esp32s3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.18.0", features = [ "esp32s3" ] }
esp-println = { version = "0.9.0", features = ["esp32s3", "log"] }
log = { version = "0.4.20" }
esp-alloc = { version = "0.4.0" }
embedded-svc = { version = "0.26.1", default-features = false, features = [] }
embedded-io = "0.6.1"
esp-wifi = { version = "0.6.0", features = [
    "esp32s3",
    "wifi",
    "log"
] }
gc9a01-rs = "0.2.1"
embedded-graphics = "0.8.1"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.2.0"
micromath = "2.1.0"
critical-section = "1.1.2"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = 's'

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release.package.esp-wifi]
opt-level = 3
